# bevy-tts

./: .gitignore  Cargo.toml  flake.nix  rustfmt.toml
.cargo/: config.toml
assets/: cube.mtl  d6.mtl
project_management/: todo.md  todo.txt
src/: camera.rs  game.rs  main.rs  obj.rs  user_input.rs  util.rs
